--- a/chatapiphase1/src/main/resources/config/DBConfiguration.properties
+++ b/chatapiphase1/src/main/resources/config/DBConfiguration.properties
@@ -1,5 +1,5 @@
 database.type=MYSQL
-database.connection.url=jdbc:mysql://localhost:3306/datingdev
-database.username=root
-database.password=Aniash@27
+database.connection.url=#### your DB URL
+database.username=## DB User
+database.password=## DB password
 database.connection.driver=com.mysql.cj.jdbc.Driver
